<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="121dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/sawah"
        android:padding="3dp"/>
    <RelativeLayout
        android:layout_toLeftOf="@id/img_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textartikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tips"
            android:textSize="12dp"/>
        <TextView
            android:id="@+id/title"
            android:layout_below="@id/textartikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_title"
            android:textSize="15dp"
            android:textColor="@color/hitam"
            />
        <TextView
            android:id="@+id/textdescription"
            android:layout_below="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_artikel"
            android:maxLines="1"/>
    </RelativeLayout>


</RelativeLayout>